# frost-secp256k1-js

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: CI.yml  release-linux.yml
examples/: basic.ts  central_dealer.ts
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs  wrappers.rs
