[package]
name = "frost-dalek-bind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib"]

[dependencies]
rand_core = { version = "0.5", default-features = false, features = ["getrandom"] }
frost-dalek = { path = "./frost-dalek" } 
ed25519-dalek = "1"
curve25519-dalek = "3"
napi = "2"
napi-derive = "2"

[build-dependencies]
napi-build = "1"
