[package]
name = "frost-dalek-bind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib"]

[dependencies]
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
frost-secp256k1 = { git = "https://github.com/XP-NETWORK/frost-secp256k1", rev = "ecd5d4bb676598acdde7061b960c3a26bd949e6c" } 
k256 = "0.10"
napi = "2"
napi-derive = "2"

[build-dependencies]
napi-build = "1"
